Fix issue with hot spots overlapping tooltips (fixes #1125, #1117).
This was an issue in Chrome >= 70.

Thanks to @KUJensen for suggesting the subsequent-sibling combinator as a fix.

--- a/src/css/pannellum.css
+++ b/src/css/pannellum.css
@@ -30,7 +30,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .pnlm-grab {
@@ -84,7 +84,7 @@
     border-color: rgba(0,0,0,0.4);
     border-radius: 3px;
     cursor: pointer;
-    z-index: 2;
+    z-index: 3;
     /* Fix Safari fullscreen bug */
     -webkit-transform: translateZ(9999px);
     transform: translateZ(9999px);
@@ -98,7 +98,7 @@
     position: absolute;
     top: 0;
     left: 4px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .pnlm-zoom-controls {
@@ -167,7 +167,7 @@
     color: #fff;
     text-align: left;
     display: none;
-    z-index: 2;
+    z-index: 3;
     /* Fix Safari fullscreen bug */
     -webkit-transform: translateZ(9999px);
     transform: translateZ(9999px);
@@ -300,7 +300,7 @@
     text-align: center;
     color: #fff;
     table-layout: fixed;
-    z-index: 1;
+    z-index: 2;
 }
 
 .pnlm-info-box a, .pnlm-author-box a {
@@ -355,7 +355,7 @@
     -o-transition: opacity .3s ease-in-out;
     -ms-transition: opacity .3s ease-in-out;
     transition: opacity .3s ease-in-out;
-    z-index: 1;
+    z-index: 2;
 }
 
 .pnlm-about-msg a:link, .pnlm-about-msg a:visited {
@@ -372,6 +372,9 @@
     cursor: default;
     vertical-align: middle;
     top: 0;
+    z-index: 1;
+}
+.pnlm-hotspot-base:hover ~ .pnlm-hotspot-base {
     z-index: 0;
 }
 .pnlm-hotspot {
